--- a/wordsearch.css
+++ b/wordsearch.css
@@ -1,11 +1,17 @@
 .row {
-    display:flex;
-    flex-direction:row;
-
+  display: flex;
+  flex-direction: row;
 }
 
 .box {
-    width:10px;
-    height:10px;
-    border:2px solid black;
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+  text-align: center;
 }
+
+#inputCon {
+  margin-top: 20px;
+}
+
+
